--- a/style.css
+++ b/style.css
@@ -178,80 +178,239 @@ header {
     background-color: #2D734B;
 }
 
-/* la section home avec " Bienvenue sur le site des JDE de l'ADES */
-.home {
-    background: linear-gradient(to right,
-            rgba(0, 192, 100, 1),
-            /* Vert foncé très visible à droite */
-            rgba(51, 212, 140, 1),
-            /* Ton vert intermédiaire */
-            rgba(2, 103, 5, 0)
-            /* Transparent vers la gauche */
-        );
-    z-index: 10;
+/* -----------responsive de header sur mobile---------------- */
+
+
+
+/* Bouton hamburger */
+.menu-toggle {
+    display: none;
+    font-size: 2rem;
+    cursor: pointer;
 }
 
-.home .texte-left {
+/* 📱 Responsive */
+@media (max-width: 768px) {
+    .nav-links ul {
+        display: none;
+        flex-direction: column;
+        background: #1b5e20;
+        position: absolute;
+        top: 60px;
+        right: 0;
+        width: 220px;
+        padding: 10px;
+        border-radius: 10px;
+    }
+
+    .nav-links ul li {
+        width: 100%;
+        position: relative;
+    }
+
+    .nav-links ul li a {
+        padding: 3px;
+        margin: 5px 0 5px 5px;
+        color: white;
+        font-size: 1.3rem;
+        font-weight: 300;
+        transition: 0.3s;
+    }
+
+    /* Sous-menu */
+    .nav-links ul li .submenu {
+        display: none;
+        /* Caché par défaut */
+        position: absolute;
+        top: 90%;
+        /* Juste en dessous du parent */
+        left: 5px;
+        border-radius: 5px;
+        background-color: #fdfafa;
+        min-width: 50px;
+        min-height: 25px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+        overflow: hidden;
+        z-index: 1000;
+        flex-direction: column;
+    }
+
+    /* Afficher le sous-menu au hover */
+    .nav-links ul li:hover .submenu {
+        display: flex;
+        justify-content: center;
+        align-items: stretch;
+    }
+
+    .nav-links ul li .submenu li a {
+        margin: 0;
+        display: block;
+        padding: 5px;
+        color: #2D734B;
+        text-decoration: none;
+        transition: background 0.5s ease;
+        z-index: 10000;
+    }
+
+    .nav-links ul li .submenu li a:hover {
+        background-color: #2D734B;
+        border-radius: 5px;
+        color: white;
+    }
+
+
+
+    .nav-links ul.active {
+        display: flex;
+    }
+
+    .menu-toggle {
+        display: block;
+    }
+
+    /* Sous-menu en mobile */
+    .nav-links ul li:hover .submenu {
+        position: relative;
+        top: 0;
+        background: #2e7d32;
+    }
+
+    /* Les boutons passent en dessous du menu */
+    header .bouttons {
+        display: none;
+        /* cachés sur mobile par défaut */
+    }
+}
+
+
+
+
+/* ---------------------------------------sectin-home-------------------------- */
+.home-section {
+    display: flex;
+    align-items: center;
+    height: 70vh;
+    overflow: hidden;
+    background-color: #F9F9F9;
+}
+
+/* Partie gauche */
+.home-left {
+    flex: 1;
+    background: #2D734B;
+    /* vert */
+    color: white;
+    padding: 50px;
     display: flex;
     flex-direction: column;
-    width: 60rem;
-    height: 30rem;
-    margin-top: 3rem;
+    justify-content: center;
+    height: 60vh;
 }
 
-
-.home .texte-left h1 {
-    font-size: 6rem;
+.home-left h1 {
+    font-size: 3.2rem;
+    margin-bottom: 30px;
     font-weight: 900;
-    color: white;
-    line-height: 70px;
-    margin-bottom: 25px;
 }
 
-.home .texte-left p {
-    font-size: 2rem;
-    color: white;
+.home-left p {
+    font-size: 1.2rem;
+    margin-bottom: 30px;
 }
 
-/* Container bouton */
-.bouttons-home {
-    display: flex;
-    justify-content: start;
-}
-
-/* Style bouton */
-.btn-2 {
-    margin-top: 30px;
+.btn {
     background: white;
-    /* vert principal */
     color: #00C064;
-    font-size: 2.1rem;
-    font-weight: bold;
-    padding: 16px 35px;
+    padding: 12px 5px;
+    border-radius: 5px;
     border: none;
+    font-size: 2rem;
     cursor: pointer;
-    transition: all 0.3s ease;
-    box-shadow: 0 6px 15px rgba(0, 192, 100, 0.3);
+    font-weight: bold;
+    z-index: 1;
 }
 
-/* Effet hover */
-.btn-2:hover {
+.home-section .btn:hover {
     background: #2D734B;
-    /* vert du boutton hover dans header */
     color: white;
-    transform: translateY(-3px);
-    /* petit effet d’élévation */
-    box-shadow: 0 10px 20px rgba(0, 192, 100, 0.4);
+    border: 1px solid white;
 }
 
-/* Image dans le bouton */
-.btn-2 img {
-    width: 25px;
-    /* taille icône */
-    height: 25px;
-    border-radius: 50%;
-    margin-left: 15px;
-    object-fit: contain;
+/* Partie droite */
+.home-right {
+    flex: 1;
+    position: relative;
+}
+
+.home-right img {
+    width: 100%;
+    height: 70vh;
+    object-fit: cover;
+}
+
+/* Effet superposition du vert par dessus l'image */
+.overlay2 {
+    position: absolute;
+    top: 0;
+    left: -50px;
+    /* décale le vert par dessus l'image */
+    width: 200px;
+    height: 70vh;
+    background: #00C064;
+    opacity: 0.8;
+    transform: skewX(-10deg);
+    /* effet incliné */
+}
+
+@media (max-width: 900px) {
+    .home-section {
+        flex-direction: column;
+    }
+
+    .home-left,
+    .home-right {
+        flex: unset;
+        width: 100%;
+    }
+
+    .overlay2 {
+        display: none;
+    }
+
+    .actualite {
+        flex-direction: column;
+    }
+
+    .grid-actualite {
+        flex: unset;
+        width: 100%;
+    }
+
+    .info {
+        flex-direction: column;
+    }
+
+    .content,
+    .buttons {
+        flex: unset;
+        width: 100%;
+    }
+
+
+
+    .info .newsletter {
+        flex-direction: column;
+    }
+
+    .form,
+    .input {
+        flex: unset;
+        width: 100%;
+    }
+
+    .overlay {
+        display: none;
+    }
 }
 
 
@@ -442,11 +601,6 @@ header {
     background: #2D734B;
 }
 
-
-
-
-
-
 /* ------------------------------------page Présentation-------------------------------- */
 
 .presentation {
@@ -550,6 +704,14 @@ footer h3 {
     letter-spacing: 2px;
 }
 
+footer .liens-utiles p a:hover {
+    text-decoration: underline;
+}
+
+footer .sv-nous {
+    margin-left: 100px;
+}
+
 footer p,
 footer a {
     font-size: 1.2rem;
@@ -559,24 +721,33 @@ footer a {
 }
 
 
-.socials-icons a {
-    margin-right: 15px;
-    font-size: 1.4rem;
+footer .buttons {
+    display: flex;
+    justify-content: space-between;
+    gap: 15px;
+    flex-wrap: wrap;
+    width: 380px;
+}
+
+footer .btn {
+    background: white;
+    color: #00C064;
+    font-weight: 900;
+    padding: 14px 32px;
+    border-radius: 4px;
+    text-decoration: none;
+    transition: all 0.3s ease;
+    font-size: 1.5rem;
+    letter-spacing: 1px;
+}
+
+footer .btn:hover {
+    background: #2D734B;
     color: white;
-    transition: color 0.3s, transform 0.3s;
+    transform: translateY(-3px);
+    border: 1px solid white;
 }
 
-.socials-icons a i:hover, .socials-icons a img:hover {
-    transform: scale(1.4);
-}
-
-.socials-icons img {
-    width: 15px;
-    height: 15px;
-    margin-top: 10px;
-    border-radius: 50%;
-    object-fit: contain;
-}
 
 .footer-bottom {
     grid-column: 1 / -1;
@@ -610,6 +781,11 @@ footer a {
     letter-spacing: 2px;
 }
 
+foot .liens-utiles p a:hover {
+    text-decoration: underline;
+}
+
+
 .foot p,
 .foot a {
     font-size: 1.2rem;
@@ -626,7 +802,8 @@ footer a {
     transition: color 0.3s, transform 0.3s;
 }
 
-.socials-icons a i:hover, .socials-icons a img:hover {
+.socials-icons a i:hover,
+.socials-icons a img:hover {
     transform: scale(1.4);
 }
 
@@ -646,4 +823,129 @@ footer a {
     border-top: 1px solid #2D734B;
     padding-top: 15px;
     color: #2D734B;
+}
+
+
+/* ------------------------------------page des actus-------------------------------- */
+
+.actu {
+    position: relative;
+    background: #F9F9F9;
+    min-height: 100vh;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.actu .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: #2D734B;
+    margin-top: 15rem;
+}
+
+.actu h1 {
+    position: absolute;
+    top: 0;
+    left: 38rem;
+    font-size: 6rem;
+    font-weight: 900;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-align: left;
+    color: #2D734B;
+}
+
+.actu span {
+    position: absolute;
+    top: 10rem;
+    left: 40rem;
+    font-size: 1.5rem;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-align: left;
+    color: #2D734B;
+}
+
+.actu .social-icons img {
+    width: 20px;
+    height: 20px;
+    margin-top: 5px;
+    border-radius: 50%;
+    object-fit: contain;
+}
+
+.actu .social-icons {
+    display: flex;
+    justify-content: start;
+    flex-direction: column;
+    align-items: flex-start;
+    position: absolute;
+    left: 50px;
+    top: 20rem;
+}
+
+/* .actu .social-icons {
+    position: sticky;
+    top: 8rem;
+} */
+
+.actu .social-icons a {
+    color: #2D734B;
+    font-size: 2.5rem;
+    margin: 0 15px;
+    text-decoration: none;
+    transition: transform 0.3s, color 0.3s;
+}
+
+.actu .social-icons a:hover {
+    transform: scale(1.2);
+}
+
+
+.actu .photo {
+    width: 75rem;
+    /* largeur fixe */
+    margin: 0 auto;
+}
+
+.actu .photo img {
+    width: 100%;
+    border-radius: 10px 10px 0 0;
+    /* arrondi en haut */
+    display: flex;
+}
+
+.actu .photo-text {
+    background: white;
+    color: black;
+    text-align: left;
+    padding: 45px 40px 200px 40px;
+    font-size: 1.6rem;
+    border-radius: 0 0 10px 10px;
+    margin-bottom: 50px;
+}
+
+.actu .photo-text .text-actu {
+    width: 68rem;
+    background-color: lightgreen;
+    border-radius: 15px;
+    padding: 30px 20px 40px 50px;
+    margin-bottom: 20px;
+}
+
+.actu .photo-text .text-actu ul li{
+    list-style-type: disc;
+    color: #888;
+    padding: 10px;
+}
+
+.actu .photo-text .text-actu ul li::marker {
+    color: #2D734B
+    font-size: 20px;
 }
