--- a/style.css
+++ b/style.css
@@ -318,23 +318,53 @@ header {
     margin-bottom: 30px;
 }
 
-.btn {
-    background: white;
-    color: #00C064;
-    padding: 12px 5px;
-    border-radius: 5px;
-    border: none;
+.slogan {
+    text-align: center;
     font-size: 2rem;
-    cursor: pointer;
     font-weight: bold;
-    z-index: 1;
+    margin: 30px 0;
+    font-family: "Times New Roman", serif;
+    letter-spacing: 2px;
+    color: white;
+    /* noir clair */
 }
 
-.home-section .btn:hover {
-    background: #2D734B;
-    color: white;
-    border: 1px solid white;
+.slogan span {
+    display: inline-block;
+    opacity: 0;
+    animation: fadeIn 2s forwards;
 }
+
+.slogan span:nth-child(1) {
+    animation-delay: 0.5s;
+    color: #00C064;
+    /* vert clair */
+}
+
+.slogan span:nth-child(2) {
+    animation-delay: 1.5s;
+    color: yellow;
+    /* bleu */
+}
+
+.slogan span:nth-child(3) {
+    animation-delay: 2.5s;
+    color: red;
+    /* orange */
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
 
 /* Partie droite */
 .home-right {
@@ -413,95 +443,66 @@ header {
     }
 }
 
-
-.actualite {
-    background-color: white;
+/* ----------------------------------section actualités--------------------------------- */
+.actus-section {
+    width: 120rem;
+    margin: 50px auto;
+    padding: 20px;
 }
 
-.actualite .title {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.actualite .title h2 {
-    color: rgba(0, 192, 100, 1);
-    font-size: 4rem;
+.actus-section h2 {
+    color: #2D734B;
+    text-transform: uppercase;
+    text-align: left;
+    font-size: 4.2rem;
     font-weight: 900;
-    margin-bottom: 3rem;
+    margin-bottom: 40px;
 }
 
-.actualite .title a {
-    color: rgba(0, 192, 100, 1);
-    text-decoration: underline;
-    font-size: 1.4rem;
-}
-
-.grid-actualite {
+.actus-container {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    column-gap: 25px;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 40px;
 }
 
-.grid-actualite .box-actualite {
-    width: 100%;
-    height: 40rem;
-    border-radius: 1rem;
-    box-shadow: 5px 5px 3rem rgba(0, 0, 0, 0.1);
+.actu-card {
+    background: #00C064;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden;
-    position: relative;
+    transition: transform 0.2s;
     cursor: pointer;
-    background-color: rgba(0, 192, 100, 1);
-    padding: 2rem;
+    text-decoration: none;
+    color: inherit;
 }
 
-.grid-actualite .box-actualite img {
-    position: absolute;
-    object-fit: cover;
-    height: 63%;
+.actu-card:hover {
+    transform: translateY(-5px);
+    transform: scale(1.1);
+}
+
+.actu-card img {
     width: 100%;
-    left: 0;
-    top: 0;
+    height: 200px;
+    object-fit: cover;
 }
 
-.grid-actualite .box-actualite .liens {
-    position: absolute;
-    top: 60%;
-    left: 10px;
-    margin-top: 10px;
-}
-
-.grid-actualite .box-actualite .liens button {
-    margin: 5px 3px 3px 3px;
-    padding: 2px 4px 2px 4px;
-    border-radius: 7px;
-    background-color: white;
-    font-size: 12px;
-    outline: none;
-    border: none;
-    transition: 0.5s;
-    color: rgba(0, 192, 100, 1);
-}
-
-.grid-actualite .box-actualite .liens button:hover {
-    background-color: rgba(0, 192, 100, 1);
-    border: none;
+.actu-card h3 {
+    margin: 15px;
+    font-size: 2.1rem;
     color: white;
 }
 
-
-.grid-actualite .box-actualite .texte {
-    position: absolute;
-    top: 70%;
-    color: white;
-    font-size: 1.5rem;
+.actu-card p {
+    margin: 0 15px 20px;
+    color: #fdfafa;
+    font-size: 1.2rem;
 }
 
-.grid-actualite .box-actualite span {
-    position: absolute;
-    top: 90%;
-    color: white;
-    font-weight: bold;
+@media (max-width: 900px) {
+    .actus-container {
+        grid-template-columns: 1fr;
+    }
 }
 
 /* -------------------------------Section Rester informé.es avec image et overlay------------------- */
@@ -687,7 +688,7 @@ header {
 /* ----------------------footer: pieds des pages principal--------------------------- */
 
 footer {
-    min-height: 30vh;
+    height: 30vh;
     background-color: #2D734B;
     border-radius: 30px 30px 0 0;
     color: white;
@@ -752,11 +753,11 @@ footer .btn:hover {
 .footer-bottom {
     grid-column: 1 / -1;
     text-align: center;
-    margin-top: 30px;
+    margin-top: 5px;
     font-size: 1rem;
     border-top: 1px solid rgba(255, 255, 255, 0.2);
-    padding-top: 15px;
-    color: #ddd;
+    padding-bottom: 10px;
+    color: #1b5e20;
 }
 
 
@@ -827,125 +828,133 @@ foot .liens-utiles p a:hover {
 
 
 /* ------------------------------------page des actus-------------------------------- */
-
-.actu {
-    position: relative;
-    background: #F9F9F9;
-    min-height: 100vh;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.actu .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    color: #2D734B;
-    margin-top: 15rem;
-}
-
-.actu h1 {
-    position: absolute;
-    top: 0;
-    left: 38rem;
-    font-size: 6rem;
-    font-weight: 900;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    text-align: left;
-    color: #2D734B;
-}
-
-.actu span {
-    position: absolute;
-    top: 10rem;
-    left: 40rem;
-    font-size: 1.5rem;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    text-align: left;
-    color: #2D734B;
-}
-
-.actu .social-icons img {
-    width: 20px;
-    height: 20px;
-    margin-top: 5px;
-    border-radius: 50%;
-    object-fit: contain;
-}
-
-.actu .social-icons {
-    display: flex;
-    justify-content: start;
-    flex-direction: column;
-    align-items: flex-start;
-    position: absolute;
-    left: 50px;
-    top: 20rem;
-}
-
-/* .actu .social-icons {
-    position: sticky;
-    top: 8rem;
-} */
-
-.actu .social-icons a {
-    color: #2D734B;
-    font-size: 2.5rem;
-    margin: 0 15px;
-    text-decoration: none;
-    transition: transform 0.3s, color 0.3s;
-}
-
-.actu .social-icons a:hover {
-    transform: scale(1.2);
-}
-
-
-.actu .photo {
-    width: 75rem;
-    /* largeur fixe */
-    margin: 0 auto;
-}
-
-.actu .photo img {
-    width: 100%;
-    border-radius: 10px 10px 0 0;
-    /* arrondi en haut */
-    display: flex;
-}
-
-.actu .photo-text {
+.actu-page {
+    width: 80rem;
+    margin: auto;
     background: white;
-    color: black;
-    text-align: left;
-    padding: 45px 40px 200px 40px;
-    font-size: 1.6rem;
-    border-radius: 0 0 10px 10px;
-    margin-bottom: 50px;
+    padding: 30px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-bottom: 70px;
+    margin-top: 30px;
 }
 
-.actu .photo-text .text-actu {
-    width: 68rem;
-    background-color: lightgreen;
-    border-radius: 15px;
-    padding: 30px 20px 40px 50px;
+.actu-page h1 {
+    color: #2D734B;
+    margin-bottom: 30px;
+    font-size: 3rem;
+    font-weight: 600;
+}
+
+.actu-page img {
+    width: 100%;
+    border-radius: 5px;
     margin-bottom: 20px;
 }
 
-.actu .photo-text .text-actu ul li{
-    list-style-type: disc;
-    color: #888;
-    padding: 10px;
+.actu-page p {
+    color: #2D734B;
+    line-height: 1.6;
+    margin-bottom: 15px;
+    font-weight: 400;
+    font-size: 1.7rem;
 }
 
-.actu .photo-text .text-actu ul li::marker {
-    color: #2D734B
-    font-size: 20px;
+a.retour {
+    display: inline-block;
+    margin-top: 20px;
+    text-decoration: none;
+    color: #2E9E47;
+    font-weight: bold;
+}
+
+/* -----------------------------------page informations pratique----------------------------------------- */
+
+.bg-infos {
+    background: linear-gradient(to right,
+            #2D734B,
+            /* Vert foncé très visible à droite */
+            rgba(51, 212, 140, 1), rgba(0, 192, 100, 1),
+            /* Ton vert intermédiaire */
+            #2D734B, #00C064
+            /* Transparent vers la gauche */
+        );
+    min-height: 80vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.infos-page {
+    margin-top: 40px;
+    margin-bottom: 7rem;
+    min-width: 800px;
+    min-height: 70vh;
+    margin: auto;
+    background: white;
+    padding: 30px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.infos-page h1 {
+    margin-bottom: 20px;
+    color: #2D734B;
+}
+
+.infos-page img {
+    width: 100%;
+    border-radius: 5px;
+    margin-bottom: 20px;
+}
+
+.infos-page p {
+    line-height: 1.6;
+    margin-bottom: 15px;
+    color: #00C064;
+}
+
+a.retour {
+    display: inline-block;
+    margin-top: 20px;
+    text-decoration: none;
+    color: #2E9E47;
+    font-weight: bold;
+}
+
+/* ------------------------------------page des programme-------------------------------- */
+.programme-page {
+    width: 80rem;
+    min-height: 70vh;
+    margin: 30px auto 50px auto;
+    background: white;
+    padding: 30px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    color: #00C064;
+}
+
+.programme-page h1 {
+    margin-bottom: 20px;
+    color: #2D734B;
+}
+
+.programme-page img {
+    width: 100%;
+    border-radius: 5px;
+    margin-bottom: 20px;
+}
+
+.programme-page p {
+    line-height: 1.6;
+    margin-bottom: 25px;
+    color: #00C064;
+}
+
+a.retour {
+    display: inline-block;
+    margin-top: 20px;
+    text-decoration: none;
+    color: #2E9E47;
+    font-weight: bold;
 }
